# cfrds

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  build_deps.bat  build_with_tests.sh  build_with_tracing.sh  build_zip.bat  test.sh  valgrind.supp  version.rc.in
.github/workflows/: cmake-multi-platform.yml
MacOS/: cfrds.rb  install.sh
cli/: CMakeLists.txt  main.c  os.h  os_posix.c  os_win.c
cmake/: cfrdsConfig.cmake.in
fuzz/: Makefile  cfrds_fuzz.c
include/: cfrds.h  cfrds.hpp  cfrds_buffer.h  cfrds_http.h  version.h.in  wddx.h
include/internal/: cfrds_buffer.h  cfrds_http.h  cfrds_int.h  explicit_bzero.h  wddx.h
pkgconfig/: cfrds.pc  cfrds.pc.in
python/: .gitignore  CMakeLists.txt  README.md  cfrds.py  cfrds.py.c  go.sh  pyproject.toml  setup.py  test.py
src/: CMakeLists.txt  cfrds.c  cfrds.cpp  cfrds_buffer.c  cfrds_buffer.cpp  cfrds_http.c  cfrds_http.cpp  wddx.c  wddx.cpp
tests/: CMakeLists.txt  test_buffer.c  test_wddx.c
tracing/: CMakeLists.txt  perfetto_backend.cpp  tracing.c
typescript/: README.md  package-lock.json  package.json
typescript/scripts/: publish.js  version.js
typescript/src/: index.ts  parser.ts  server.ts  test.ts  transport.ts  types.ts
windows/: build.bat  build_deps.bat  build_installer.bat  build_zip.bat  cfrds.iss
